Further improve vertical spacing and fix missing icons
- Increased line-height from 1.9 to 2.1 for more comfortable reading
- Increased paragraph spacing from 1.3em to 1.5em
- Increased list item spacing from 0.5em to 0.7em
- Improved heading margins (2em top, 1em bottom)
- Added list.html and tags/terms.html overrides to ensure Font Awesome loads on all pages

--- a/static/css/readability.css
+++ b/static/css/readability.css
@@ -6,38 +6,38 @@
 .content blockquote,
 .content td,
 .content th {
-    line-height: 1.9;
+    line-height: 2.1;
 }
 
 /* Main page content */
 .home article p,
 .home article li {
-    line-height: 1.9;
+    line-height: 2.1;
 }
 
 /* Single page content (posts, about, etc.) */
 .single article p,
 .single article li,
 .single article blockquote {
-    line-height: 1.9;
+    line-height: 2.1;
 }
 
 /* List pages (blog, tags) */
 .list .post-entry p,
 .list .post-summary {
-    line-height: 1.8;
+    line-height: 2.0;
 }
 
 /* Also improve spacing between paragraphs */
 .content p,
 .home article p,
 .single article p {
-    margin-bottom: 1.3em;
+    margin-bottom: 1.5em;
 }
 
 /* Add spacing between list items */
 .content li {
-    margin-bottom: 0.5em;
+    margin-bottom: 0.7em;
 }
 
 /* Better spacing for headings */
@@ -47,6 +47,6 @@
 .content h4,
 .content h5,
 .content h6 {
-    margin-top: 1.5em;
-    margin-bottom: 0.8em;
+    margin-top: 2em;
+    margin-bottom: 1em;
 }
